[Fix]スライドショーの切り替え表示をz-indexで一番上に来ないようにする

--- a/app/assets/stylesheets/skippr.css
+++ b/app/assets/stylesheets/skippr.css
@@ -1,10 +1,10 @@
-.skippr { 
+.skippr {
   width: 100%;
   height: 100%;
   position: relative;
   overflow: hidden
 }
-  
+
 .skippr>div {
   position: absolute;
   width: 100%;
@@ -34,7 +34,7 @@
   -ms-transform: translate(-50%, 0);
   bottom: 5px;
   overflow: auto;
-  z-index: 999
+  z-index: 11
 }
 
 .skippr-nav-element {
